--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,5 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="/Users/ben/Documents/Classes/Dissertation/workspace/grammar/lib/antlr-3.4-complete.jar"/>
 	<classpathentry kind="lib" path="lib"/>
-	<classpathentry kind="output" path="examples-v3/java/java"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
