--- a/src/Makefile
+++ b/src/Makefile
@@ -4,26 +4,14 @@ ANTLRFLAGS=
 %.class : %.java
 	javac -cp $(CLASSPATH) $<
 
-all: SpokenLangLexer.java SpokenLangParser.java SLJavaEmitter.java TypeInf.java VarDef1.java
-
-SpokenCompiler.class: VarType.class SymbolTable.class SpokenLangLexer.class SpokenLangParser.class \
-	SLJavaEmitter.class SymEntry.class SLTreeNode.class SLTreeAdaptor.class VarDef1.class TypeInf.class \
-	FunctionSym.class VarConstraint.class
-
-SpokenLangLexer.java SpokenLangParser.java: SpokenLang.g
-	java -cp $(CLASSPATH) org.antlr.Tool $(ANTLRFLAGS) SpokenLang.g
-
-SLJavaEmitter.java: SLJavaEmitter.g SpokenLang.tokens
-	java -cp $(CLASSPATH) org.antlr.Tool $(ANTLRFLAGS) SLJavaEmitter.g
-
-VarDef1.java: VarDef1.g SpokenLang.tokens
-	java -cp $(CLASSPATH) org.antlr.Tool $(ANTLRFLAGS) VarDef1.g
-
-TypeInf.java: TypeInf.g SpokenLang.tokens
-	java -cp $(CLASSPATH) org.antlr.Tool $(ANTLRFLAGS) TypeInf.g
+all: org/bxg/spokencompiler
+	$(MAKE) -C org/bxg/spokencompiler
 
 clean:
 	rm -f *.class *.tokens SpokenLangLexer.java SpokenLangParser.java SLJavaEmitter.java VarDef1.java TypeInf.java
+	$(MAKE) -C org/bxg/spokencompiler clean
 
 test: SpokenCompiler.class
 	./runalltests.sh
+
+.PHONY: all clean
