Update Makefile for new source organization.

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,7 @@ ANTLRFLAGS=
 %.class : %.java
 	javac -cp $(CLASSPATH) $<
 
-all: org/bxg/spokencompiler
+all:
 	$(MAKE) -C org/bxg/spokencompiler
 
 clean:
